--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "config": "^3.2.4",
     "cors": "^2.8.5",
+    "ejs": "^3.0.1",
     "env-cmd": "^10.0.1",
     "express": "^4.17.1",
     "mongodb": "^3.3.5",
